--- a/download_centre/computer_optimiser.html
+++ b/download_centre/computer_optimiser.html
@@ -1,91 +1,91 @@
 <!DOCTYPE html>
 <html lang="en-GB">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="This is the download page for the Hackboto Tech Tips Computer Optimiser.">
-    <meta name="keywords" content="Software, Script, Low, space, Optimise, Corrupt, glitchy, sluggish.">
-    <meta name="robots" content="index, follow">
-    <link rel="stylesheet" href="../stylesheet.css"> <!-- Link to external stylesheet -->
-    <link rel="icon" type="image/x-icon" href="../favicon.png">
-    <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet'>
-    <script src="../scripts.js"></script> <!-- Link to external JavaScript file -->
-    <title>Computer Optimiser | Hackboto Tech Tips</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="This is the download page for the Hackboto Tech Tips Computer Optimiser.">
+	<meta name="keywords" content="Software, Script, Low, space, Optimise, Corrupt, glitchy, sluggish.">
+	<meta name="robots" content="index, follow">
+	<link rel="stylesheet" href="../stylesheet.css"> <!--Stylesheet-->
+	<link rel="icon" type="image/x-icon" href="../favicon.png">
+	<link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet'>
+	<script src="../scripts.js"></script> <!--JavaScript-->
+	<title>Computer Optimiser | Hackboto Tech Tips</title>
 </head>
 <body>
-    <div class="sticky">
-        <header> <!-- Header section -->
-            <p>Hackboto Tech Tips</p> <!-- Header text -->
-        </header>
-        <nav class="nav" id="Nav" title="Main Navigation"> <!-- Navigation section -->
-            <div class="columnnav">
-                <a href="../index.html" title="Go to Home">Home</a> <!-- Navigation links -->
-                <a href="../pc_tips.html" title="Explore tips and tricks for your PC">PC Guides</a>
-                <a href="../mobile_tips.html" title="Explore tips and tricks for you mobile">Mobile Guides</a>
-                <a href="../download_centre.html" class="active" title="Find file downloads here.">Download Centre</a>
-                <a href="../contact.html" title="Visit Contact page">Contact</a>
-            </div>
-            <div class="columnclose">
-                <div class="nav"><button href="javascript:void(0);" class="icon" onclick="navHamburger()" title="Toggle Navigation">☰More</button></div> <!-- Navigation hamburger icon -->
-            </div>
-        </nav>
-    </div>
-      <aside title="Page Navigation"> <!-- Aside section for additional content -->
-        <h2>Page Navigation</h2>
-        <hr>
-        <ul>
-            <li><a href="#top-of-page" title="Go To The Top Of Webpage">Go To Top</a></li>
-            <li><a href="#function" title="Jump to Function">Functions</a></li>
-            <li><a href="#download" title="Jump to download process">Download</a></li>
-            <li><a href="#how-to-use" title="Jump to user guide">User Guide</a></li>
-        </ul>        
-    </aside>    
-    <article title="Main Article Content"> <!-- Main article content -->
-        <h1 id="top-of-page">Download: Computer Optimiser Scripts (Deprecated)</h1>
-            <img src="computer_optimiser/system_optimiser.webp" alt="an image representing the System Optimiser Script.">
-                <p class="imgdescription">The Hackboto Tech Tips Computer Optimiser Scripts are really easy to use, just follow the instructions that you are provided with.</p>
-            <h2 id="function">What Does the Script Do?</h2>
-                <p>The Hackboto Tech Tips Computer Optimiser scripts are free scripts that remove old and unnecessary system files such as error logs, previous updates, etc, as well as old unnecessary files from your user account such as old application logs, and other junk files that will eat up your storage space.</p>
-            <h2 id="download">Downloading the scripts</h2>
-                <p>You can download the scripts using the download button below, this should start the download process.</p>
-                <a class="linkbutton" title="Download Computer_Optimiser.zip" href="https://github.com/H90HSORH0J30JHDSRH/hackbototechtipsfiles/releases/download/downloads/Computer_Optimiser.zip">Download Computer_Optimiser.zip</a>
-                <p><strong>These scripts have been deprecated and are no longer updated, please use the Windows Optimiser program as an alternative.</strong></p>
-                <a class="linkbutton" title="View Download Page for Windows Optimiser" href="https://hackbototechtips.github.io/download_centre/windows_optimiser.html">Learn about: Windows Optimiser</a>
-                <br>
-                <img src="computer_optimiser/folder_download.webp" alt="When you download the folder you should see two files, System_Optimiser.bat and User_Optimiser.bat">
-                    <p>Once you have downloaded the file, you should have a .zip folder, this folder should contain the System_Optimiser.bat and User_Optimiser.bat scripts, if you do not see these scripts, it is possible that there is a problem with the download, if this happens try downloading again.</p>
-            <h2 id="how-to-use">How do I use the scripts?</h2> 
-                <p>The scripts are really simple and easy to use, the script has been split into two files called "System_Optimiser.bat" and "User_Optimiser.bat".</p>
-                <p>System_Optimiser.bat: This script makes changes to your computer system, it will aim to repair system files that are corrupt and delete system junk such as old update files, outdated drivers, old logs, etc.</p>
-                <p>User_Optimiser.bat: This script will only apply changes to your user account; therefore, it does not require admin rights to run, you should run this script after running the "System_Optimiser.bat".</p>
-                <h3>Step 1: Run System_Optimiser.bat</h3>
-                    <p>To Run the System_Optimiser you need to double click on it from within the folder mentioned in the previous section.</p>
-                    <img src="settings_optimiser/step1.webp" alt="Visual representation of error, there are three buttons you need to click on 'Run'.">
-                        <p>When running the System_Optimiser you might see this error, you need to click 'Run' to continue.</p>
-                    <img src="settings_optimiser/clickonmoreinfo.webp" alt="Visual representation of error, you might face an antivirus error, if this happens click on 'More info'.">
-                        <p>Sometimes the script will be blocked by the built-in antivirus, this is because the script was not created on your computer, if you see this error you will need to click on 'More info'.</p>
-                    <img src="settings_optimiser/runanyway.webp" alt="Visual representation of error, after clicking on 'More info' click on 'Run anyway'.">
-                        <p>After clicking on 'More info' you will need to click on 'Run anyway' to continue.</p>    
-                    <img src="settings_optimiser/UAC.webp" alt="Image representing User Account Control.">
-                        <p>You will be asked to enter your Admin password at this stage, once you enter your password click yes. You might not need a password if you are using an Admin account to run the script.</p>
-                    <img src="computer_optimiser/system_optimiser.webp" alt="Image representing the system optimiser">
-                        <p>By this stage the System_Optimiser should be running, you will be asked to read through the Terms and Conditions, enter 'Y' if you agree to the Terms and Conditions and would like to start the script, if you do not agree with the Terms and Conditions enter 'N' and the script will close, and no changes will be made to your computer.</p>
-                        <p>Once the script has completed you will see a message telling you this, when you click OK, your computer will restart, and you can move onto step 2.</p>
-                <h3>Step 2: Run User_Optimiser.bat</h3>
-                    <p>This script does not require admin rights; therefore, you can run it on both standard and admin accounts. If you have many user accounts on your computer, you will need to run the script on each account.</p>
-                    <p>To run the script, you need to repeat the steps in step 1, however you need to run the User_Optimiser.bat instead of the System_Optimiser.bat.</p>
-        <hr> 
-        <p>Page Updated: 28/02/2025</p>
-        <p>Page Author: Hackboto</p>
-    </article>
-    <footer class="asidefooter" title="Website Footer"> <!-- Footer section -->
-        <div class="footertext">
-            <p>©2025 Hackboto Tech Tips All Rights Reserved</p> <!-- Copyright notice -->
-        </div>
-        <div class="footerbuttons">
-            <a href="../map.html" title="Go to Sitemap">Sitemap</a> <!-- Link to sitemap -->
-            <a href="../legal.html" title="Go to Legal">Legal</a> <!-- Link to Legal Page -->
-        </div>
-    </footer> 
+	<div class="sticky">
+		<header>
+			<p>Hackboto Tech Tips</p>
+		</header>
+		<nav class="nav" id="Nav" title="Main Navigation"> <!--Nav-->
+			<div class="columnnav">
+				<a href="../index.html" title="Go to Home">Home</a>
+				<a href="../pc_tips.html" title="Explore tips and tricks for your PC">PC Guides</a>
+				<a href="../mobile_tips.html" title="Explore tips and tricks for you mobile">Mobile Guides</a>
+				<a href="../download_centre.html" class="active" title="Find file downloads here.">Download Centre</a>
+				<a href="../contact.html" title="Visit Contact page">Contact</a>
+			</div>
+			<div class="columnclose">
+				<div class="nav"><button href="javascript:void(0);" class="icon" onclick="navHamburger()" title="Toggle Navigation">☰More</button></div>
+			</div>
+		</nav>
+	</div>
+	  <aside title="Page Navigation">
+		<h2>Page Navigation</h2>
+		<hr>
+		<ul>
+			<li><a href="#top-of-page" title="Go To The Top Of Webpage">Go To Top</a></li>
+			<li><a href="#function" title="Jump to Function">Functions</a></li>
+			<li><a href="#download" title="Jump to download process">Download</a></li>
+			<li><a href="#how-to-use" title="Jump to user guide">User Guide</a></li>
+		</ul>        
+	</aside>    
+	<article title="Main Article Content">
+		<h1 id="top-of-page">Download: Computer Optimiser Scripts (Deprecated)</h1>
+			<img src="computer_optimiser/system_optimiser.webp" alt="an image representing the System Optimiser Script.">
+			<p class="imgdescription">The Hackboto Tech Tips Computer Optimiser Scripts are really easy to use, just follow the instructions that you are provided with.</p>
+			<h2 id="function">What Does the Script Do?</h2>
+				<p>The Hackboto Tech Tips Computer Optimiser scripts are free scripts that remove old and unnecessary system files such as error logs, previous updates, etc, as well as old unnecessary files from your user account such as old application logs, and other junk files that will eat up your storage space.</p>
+			<h2 id="download">Downloading the scripts</h2>
+				<p>You can download the scripts using the download button below, this should start the download process.</p>
+				<a class="linkbutton" title="Download Computer_Optimiser.zip" href="https://github.com/H90HSORH0J30JHDSRH/hackbototechtipsfiles/releases/download/downloads/Computer_Optimiser.zip">Download Computer_Optimiser.zip</a>
+				<p><strong>These scripts have been deprecated and are no longer updated, please use the Windows Optimiser program as an alternative.</strong></p>
+				<a class="linkbutton" title="View Download Page for Windows Optimiser" href="https://hackbototechtips.github.io/download_centre/windows_optimiser.html">Learn about: Windows Optimiser</a>
+				<br>
+				<img src="computer_optimiser/folder_download.webp" alt="When you download the folder you should see two files, System_Optimiser.bat and User_Optimiser.bat">
+				<p>Once you have downloaded the file, you should have a .zip folder, this folder should contain the System_Optimiser.bat and User_Optimiser.bat scripts, if you do not see these scripts, it is possible that there is a problem with the download, if this happens try downloading again.</p>
+			<h2 id="how-to-use">How do I use the scripts?</h2> 
+				<p>The scripts are really simple and easy to use, the script has been split into two files called "System_Optimiser.bat" and "User_Optimiser.bat".</p>
+				<p>System_Optimiser.bat: This script makes changes to your computer system, it will aim to repair system files that are corrupt and delete system junk such as old update files, outdated drivers, old logs, etc.</p>
+				<p>User_Optimiser.bat: This script will only apply changes to your user account; therefore, it does not require admin rights to run, you should run this script after running the "System_Optimiser.bat".</p>
+				<h3>Step 1: Run System_Optimiser.bat</h3>
+					<p>To Run the System_Optimiser you need to double click on it from within the folder mentioned in the previous section.</p>
+					<img src="settings_optimiser/step1.webp" alt="Visual representation of error, there are three buttons you need to click on 'Run'.">
+					<p>When running the System_Optimiser you might see this error, you need to click 'Run' to continue.</p>
+					<img src="settings_optimiser/clickonmoreinfo.webp" alt="Visual representation of error, you might face an antivirus error, if this happens click on 'More info'.">
+					<p>Sometimes the script will be blocked by the built-in antivirus, this is because the script was not created on your computer, if you see this error you will need to click on 'More info'.</p>
+					<img src="settings_optimiser/runanyway.webp" alt="Visual representation of error, after clicking on 'More info' click on 'Run anyway'.">
+					<p>After clicking on 'More info' you will need to click on 'Run anyway' to continue.</p>    
+					<img src="settings_optimiser/UAC.webp" alt="Image representing User Account Control.">
+					<p>You will be asked to enter your Admin password at this stage, once you enter your password click yes. You might not need a password if you are using an Admin account to run the script.</p>
+					<img src="computer_optimiser/system_optimiser.webp" alt="Image representing the system optimiser">
+					<p>By this stage the System_Optimiser should be running, you will be asked to read through the Terms and Conditions, enter 'Y' if you agree to the Terms and Conditions and would like to start the script, if you do not agree with the Terms and Conditions enter 'N' and the script will close, and no changes will be made to your computer.</p>
+					<p>Once the script has completed you will see a message telling you this, when you click OK, your computer will restart, and you can move onto step 2.</p>
+				<h3>Step 2: Run User_Optimiser.bat</h3>
+					<p>This script does not require admin rights; therefore, you can run it on both standard and admin accounts. If you have many user accounts on your computer, you will need to run the script on each account.</p>
+					<p>To run the script, you need to repeat the steps in step 1, however you need to run the User_Optimiser.bat instead of the System_Optimiser.bat.</p>
+		<hr> 
+		<p>Page Updated: 28/02/2025</p>
+		<p>Page Author: Hackboto</p>
+	</article>
+	<footer class="asidefooter" title="Website Footer"> <!--Footer-->
+		<div class="footertext">
+			<p>©2025 Hackboto Tech Tips All Rights Reserved</p>
+		</div>
+		<div class="footerbuttons">
+			<a href="../map.html" title="Go to Sitemap">Sitemap</a>
+			<a href="../legal.html" title="Go to Legal">Legal</a>
+		</div>
+	</footer> 
 </body>
 </html>
