--- a/download_centre/multi-pane_overlay_disable_reg.html
+++ b/download_centre/multi-pane_overlay_disable_reg.html
@@ -1,77 +1,77 @@
 <!DOCTYPE html>
 <html lang="en-GB">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Download page for the Hackboto Tech Tips Multi-Plane Overlay Registry Fix for black screens and artefacts when using Hardware Acceleration on Windows 10/ 11">
-    <meta name="keywords" content="Hardware, Acceleration, Black Screen, Fix, Multi-Plane Overlay, MPO">
-    <meta name="robots" content="index, follow">
-    <link rel="stylesheet" href="../stylesheet.css"> <!-- Link to external stylesheet -->
-    <link rel="icon" type="image/x-icon" href="../favicon.png">
-    <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet'>
-    <script src="../scripts.js"></script> <!-- Link to external JavaScript file -->
-    <title>MPO Fix Download | Hackboto Tech Tips</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Download page for the Hackboto Tech Tips Multi-Plane Overlay Registry Fix for black screens and artefacts when using Hardware Acceleration on Windows 10/ 11">
+	<meta name="keywords" content="Hardware, Acceleration, Black Screen, Fix, Multi-Plane Overlay, MPO">
+	<meta name="robots" content="index, follow">
+	<link rel="stylesheet" href="../stylesheet.css"> <!--Stylesheet-->
+	<link rel="icon" type="image/x-icon" href="../favicon.png">
+	<link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet'>
+	<script src="../scripts.js"></script> <!--JavaScript-->
+	<title>MPO Fix Download | Hackboto Tech Tips</title>
 </head>
 <body>
-    <div class="sticky">
-        <header> <!-- Header section -->
-            <p>Hackboto Tech Tips</p> <!-- Header text -->
-        </header>
-        <nav class="nav" id="Nav" title="Main Navigation"> <!-- Navigation section -->
-            <div class="columnnav">
-                <a href="../index.html" title="Go to Home">Home</a> <!-- Navigation links -->
-                <a href="../pc_tips.html" title="Explore tips and tricks for your PC">PC Guides</a>
-                <a href="../mobile_tips.html" title="Explore tips and tricks for you mobile">Mobile Guides</a>
-                <a href="../download_centre.html" class="active" title="Find file downloads here.">Download Centre</a>
-                <a href="../contact.html" title="Visit Contact page">Contact</a>
-            </div>
-            <div class="columnclose">
-                <div class="nav"><button href="javascript:void(0);" class="icon" onclick="navHamburger()" title="Toggle Navigation">☰More</button></div> <!-- Navigation hamburger icon -->
-            </div>
-        </nav>
-    </div>
-      <aside title="Page Navigation"> <!-- Aside section for additional content -->
-        <h2>Page Navigation</h2>
-        <hr>
-        <ul>
-            <li><a href="#top-of-page" title="Go To The Top Of Webpage">Go To Top</a></li>
-            <li><a href="#function" title="Jump to Function">Functions</a></li>
-            <li><a href="#download" title="Jump to download process">Download</a></li>
-            <li><a href="#how-to-use" title="Jump to user guide">User Guide</a></li>
-        </ul>        
-    </aside>    
-    <article title="Main Article Content"> <!-- Main article content -->
-        <h1 id="top-of-page">Download: Multi-Plane Overlay Fix</h1>
-            <img src="multi-pane_overlay_disable_reg/disable_mpo.webp" alt="image representing the registry contents of the MPO disable .reg file.">
-                <p class="imgdescription">The Disable_MPO.reg and Enable_MPO.reg files can be used to disable the Windows 8.1, 10, 11 Multi-Plane Overlay feature.</p>
-            <h2 id="function">What do the .reg files do?</h2>
-                <p>There are two .reg files, these files enable and disable the Multi-Plane Overlay feature that is present in Windows 8.1 and later.</p>
-                <p>In later versions of Windows 10 and in Windows 11 the Multi-Plane Overlay feature can cause problems with Hardware Acceleration, this can result in black artefacts, black checkerboards, and black flashing screens, etc, to learn more visit the 'Fix Hardware Acceleration Black Screen' guide.</p>
-                <a class="linkbutton" href="https://hackbototechtips.github.io/pc_tips/hardware_acceleration_black_screen_fix.html" title="Learn About Fixing Black Screens and Artefacts in Windows 10/ 11 Without Disabling HW Acceleration">View Fix Hardware Acceleration Black Screen guide</a>
-            <h2 id="download">Downloading the .reg Files</h2>
-                <p>You can download the .reg files using the download button below, this should start the download process.</p>
-                <a class="linkbutton" title="Download MPO_Fix.zip" href="https://github.com/H90HSORH0J30JHDSRH/hackbototechtipsfiles/releases/download/downloads/MPO_Fix.zip">Download MPO_Fix.zip</a>
-                <br>
-                <img src="multi-pane_overlay_disable_reg/MPO_FixFolder.webp" alt="When you download the folder you should see two files, Disable_MPO.reg and Enable_MPO.reg">
-                    <p>Once you have downloaded the file, you should have a .zip folder called MPO_Fix.zip, this folder should contain the Disable_MPO.reg and Enable_MPO.reg registry files, if you do not see these files, it is possible that there is a problem with the download, if this happens try downloading again.</p>
-            <h2 id="how-to-use">Using the .reg files</h2> 
-                <p>The registry files are easy to use, you will have two files "Disable_MPO.reg" and "Enable_MPO.reg".</p>
-                <p>Disable_MPO.reg: This will disable Multi-Plane Overlay on your Windows 8.1 or later pc; this is used to apply the hardware acceleration fix.</p>
-                <p>Enable_MPO.reg: This will enable Multi-Plane Overlay and reverse any changes that have been made to your computer.</p>
-                <p>To make the changes to your computer, you simply need to double click on the file you would like to run, once you have been told that the file has been successfully added to the registry you will need to restart your computer.</p>
-                <p><strong>If Disabling Multi-Plane Overlay did not fix your problems, I strongly advise that you re-enable it as this could potentially cause performance issues if you have disabled it and it wasn't the cause of your problems.</strong></p>
-        <hr> 
-        <p>Page Updated: 14/10/2024</p>
-        <p>Page Author: Hackboto</p>
-    </article>
-    <footer class="asidefooter" title="Website Footer"> <!-- Footer section -->
-        <div class="footertext">
-            <p>©2025 Hackboto Tech Tips All Rights Reserved</p> <!-- Copyright notice -->
-        </div>
-        <div class="footerbuttons">
-            <a href="../map.html" title="Go to Sitemap">Sitemap</a> <!-- Link to sitemap -->
-            <a href="../legal.html" title="Go to Legal">Legal</a> <!-- Link to Legal Page -->
-        </div>
-    </footer> 
+	<div class="sticky">
+		<header>
+			<p>Hackboto Tech Tips</p>
+		</header>
+		<nav class="nav" id="Nav" title="Main Navigation"> <!--Nav-->
+			<div class="columnnav">
+				<a href="../index.html" title="Go to Home">Home</a>
+				<a href="../pc_tips.html" title="Explore tips and tricks for your PC">PC Guides</a>
+				<a href="../mobile_tips.html" title="Explore tips and tricks for you mobile">Mobile Guides</a>
+				<a href="../download_centre.html" class="active" title="Find file downloads here.">Download Centre</a>
+				<a href="../contact.html" title="Visit Contact page">Contact</a>
+			</div>
+			<div class="columnclose">
+				<div class="nav"><button href="javascript:void(0);" class="icon" onclick="navHamburger()" title="Toggle Navigation">☰More</button></div>
+			</div>
+		</nav>
+	</div>
+	  <aside title="Page Navigation">
+		<h2>Page Navigation</h2>
+		<hr>
+		<ul>
+			<li><a href="#top-of-page" title="Go To The Top Of Webpage">Go To Top</a></li>
+			<li><a href="#function" title="Jump to Function">Functions</a></li>
+			<li><a href="#download" title="Jump to download process">Download</a></li>
+			<li><a href="#how-to-use" title="Jump to user guide">User Guide</a></li>
+		</ul>        
+	</aside>    
+	<article title="Main Article Content">
+		<h1 id="top-of-page">Download: Multi-Plane Overlay Fix</h1>
+			<img src="multi-pane_overlay_disable_reg/disable_mpo.webp" alt="image representing the registry contents of the MPO disable .reg file.">
+				<p class="imgdescription">The Disable_MPO.reg and Enable_MPO.reg files can be used to disable the Windows 8.1, 10, 11 Multi-Plane Overlay feature.</p>
+			<h2 id="function">What do the .reg files do?</h2>
+				<p>There are two .reg files, these files enable and disable the Multi-Plane Overlay feature that is present in Windows 8.1 and later.</p>
+				<p>In later versions of Windows 10 and in Windows 11 the Multi-Plane Overlay feature can cause problems with Hardware Acceleration, this can result in black artefacts, black checkerboards, and black flashing screens, etc, to learn more visit the 'Fix Hardware Acceleration Black Screen' guide.</p>
+				<a class="linkbutton" href="https://hackbototechtips.github.io/pc_tips/hardware_acceleration_black_screen_fix.html" title="Learn About Fixing Black Screens and Artefacts in Windows 10/ 11 Without Disabling HW Acceleration">View Fix Hardware Acceleration Black Screen guide</a>
+			<h2 id="download">Downloading the .reg Files</h2>
+				<p>You can download the .reg files using the download button below, this should start the download process.</p>
+				<a class="linkbutton" title="Download MPO_Fix.zip" href="https://github.com/H90HSORH0J30JHDSRH/hackbototechtipsfiles/releases/download/downloads/MPO_Fix.zip">Download MPO_Fix.zip</a>
+				<br>
+				<img src="multi-pane_overlay_disable_reg/MPO_FixFolder.webp" alt="When you download the folder you should see two files, Disable_MPO.reg and Enable_MPO.reg">
+					<p>Once you have downloaded the file, you should have a .zip folder called MPO_Fix.zip, this folder should contain the Disable_MPO.reg and Enable_MPO.reg registry files, if you do not see these files, it is possible that there is a problem with the download, if this happens try downloading again.</p>
+			<h2 id="how-to-use">Using the .reg files</h2>
+				<p>The registry files are easy to use, you will have two files "Disable_MPO.reg" and "Enable_MPO.reg".</p>
+				<p>Disable_MPO.reg: This will disable Multi-Plane Overlay on your Windows 8.1 or later pc; this is used to apply the hardware acceleration fix.</p>
+				<p>Enable_MPO.reg: This will enable Multi-Plane Overlay and reverse any changes that have been made to your computer.</p>
+				<p>To make the changes to your computer, you simply need to double click on the file you would like to run, once you have been told that the file has been successfully added to the registry you will need to restart your computer.</p>
+				<p><strong>If Disabling Multi-Plane Overlay did not fix your problems, I strongly advise that you re-enable it as this could potentially cause performance issues if you have disabled it and it wasn't the cause of your problems.</strong></p>
+		<hr>
+		<p>Page Updated: 14/10/2024</p>
+		<p>Page Author: Hackboto</p>
+	</article>
+	<footer class="asidefooter" title="Website Footer"> <!--Footer-->
+		<div class="footertext">
+			<p>©2025 Hackboto Tech Tips All Rights Reserved</p>
+		</div>
+		<div class="footerbuttons">
+			<a href="../map.html" title="Go to Sitemap">Sitemap</a>
+			<a href="../legal.html" title="Go to Legal">Legal</a>
+		</div>
+	</footer>
 </body>
 </html>
