--- a/download_centre/windows_optimiser.html
+++ b/download_centre/windows_optimiser.html
@@ -1,86 +1,86 @@
 <!DOCTYPE html>
 <html lang="en-GB">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="This is the download page for the Hackboto Tech Tips Windows Optimiser.">
-    <meta name="keywords" content="Software, Low, space, Optimise, Corrupt, glitchy, sluggish, fix">
-    <meta name="robots" content="index, follow">
-    <link rel="stylesheet" href="../stylesheet.css"> <!-- Link to external stylesheet -->
-    <link rel="icon" type="image/x-icon" href="../favicon.png">
-    <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet'>
-    <script src="../scripts.js"></script> <!-- Link to external JavaScript file -->
-    <title>Windows Optimiser | Hackboto Tech Tips</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="This is the download page for the Hackboto Tech Tips Windows Optimiser.">
+	<meta name="keywords" content="Software, Low, space, Optimise, Corrupt, glitchy, sluggish, fix">
+	<meta name="robots" content="index, follow">
+	<link rel="stylesheet" href="../stylesheet.css"> <!--Stylesheet-->
+	<link rel="icon" type="image/x-icon" href="../favicon.png">
+	<link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet'>
+	<script src="../scripts.js"></script> <!--JavaScript-->
+	<title>Windows Optimiser | Hackboto Tech Tips</title>
 </head>
 <body>
-    <div class="sticky">
-        <header> <!-- Header section -->
-            <p>Hackboto Tech Tips</p> <!-- Header text -->
-        </header>
-        <nav class="nav" id="Nav" title="Main Navigation"> <!-- Navigation section -->
-            <div class="columnnav">
-                <a href="../index.html" title="Go to Home">Home</a> <!-- Navigation links -->
-                <a href="../pc_tips.html" title="Explore tips and tricks for your PC">PC Guides</a>
-                <a href="../mobile_tips.html" title="Explore tips and tricks for you mobile">Mobile Guides</a>
-                <a href="../download_centre.html" class="active" title="Find file downloads here.">Download Centre</a>
-                <a href="../contact.html" title="Visit Contact page">Contact</a>
-            </div>
-            <div class="columnclose">
-                <div class="nav"><button href="javascript:void(0);" class="icon" onclick="navHamburger()" title="Toggle Navigation">☰More</button></div> <!-- Navigation hamburger icon -->
-            </div>
-        </nav>
-    </div>
-      <aside title="Page Navigation"> <!-- Aside section for additional content -->
-        <h2>Page Navigation</h2>
-        <hr>
-        <ul>
-            <li><a href="#top-of-page" title="Go To The Top Of Webpage">Go To Top</a></li>
-            <li><a href="#function" title="Jump to Function">Functions</a></li>
-            <li><a href="#download" title="Jump to download process">Download</a></li>
-            <li><a href="#how-to-use" title="Jump to user guide">User Guide</a></li>
-            <li><a href="#legacy" title="Jump to legacy version">Legacy Version</a></li>
-        </ul>        
-    </aside>    
-    <article title="Main Article Content"> <!-- Main article content -->
-        <h1 id="top-of-page">Download: Windows Optimiser</h1>
-            <img src="windows_optimiser/windows_optimiser.webp" alt="an image representing the Windows Optimiser.">
-            <h2 id="function">What does the program do?</h2>
-                <p>The Hackboto Tech Tips Windows Optimiser is a free program that removes old and unnecessary system files such as error logs, previous updates, etc from your computer system, as well as old unnecessary files from your user account such as old application logs, and other junk files that will eat up your storage space and cause performance issues.</p>
-            <h2 id="download">Downloading the program</h2>
-                <p>You can download the Hackboto Tech Tips Windows Optimiser using the download button below, this should start the download process.</p>
-                <a class="linkbutton" title="Download Windows_Optimiser.bat" href="https://github.com/H90HSORH0J30JHDSRH/hackbototechtipsfiles/releases/download/downloads/Windows_Optimiser.bat">Download Windows_Optimiser.bat</a>
-                <p>The latest version is 1.3.0 (last updated: 28/02/2025)</p>
-            <h2 id="how-to-use">How do I use the program?</h2> 
-                <h3>Running the program.</h3>
-                    <p>To Run the Windows Optimiser you need to double click on the "Windows_Optimiser.bat" file you have downloaded.</p>
-                    <img src="settings_optimiser/clickonmoreinfo.webp" alt="Visual representation of error, you might face an antivirus error, if this happens click on 'More info'.">
-                        <p>Sometimes the program will be blocked by the built-in antivirus, this is because the program was not created on your computer and has been downloaded off the internet, if you see this warning you will need to click on "More info".</p>
-                    <img src="settings_optimiser/runanyway.webp" alt="Visual representation of error, after clicking on 'More info' click on 'Run anyway'.">
-                        <p>After clicking on "More info" you will need to click on "Run anyway" to continue.</p>    
-                    <img src="windows_optimiser/windows_optimiser.webp" alt="an image representing the Windows Optimiser.">
-                        <p>By this stage the Windows Optimiser should be running, you will see two functions which are the User Account Optimiser and the Computer System Optimiser.</p>
-                <h3>Using the Optimise Computer System feature.</h3>
-                    <p>The Optimise Computer System feature will target your computer system specifically, it will restore the optimal stability and performance by verifying and repairing your Windows component store, removing old driver leftovers, clearing the system of temporary files, checking for file system errors, clearing old error logs, etc to boost the performance of your computer system and to restore the stability.</p>
-                    <p>The Optimise Computer System will require administrative rights, this means that you will need to provide your administrative credentials when you are asked to, the Computer Optimiser will also restart your computer once it has concluded so bear this in mind when you run it.</p>
-                <h3>Using the Optimise User Account feature.</h3>
-                    <p>The Optimise User Account feature will specifically target your user account, it will remove any old junk files that have accumulated, clear your jump-lists and file history to improve performance, etc.</p>
-                    <p>This feature will not restart your PC and does not require any administrative privileges as it will not make any changes to your computer system and will only optimise your user account, therefore administrative privileges are not required for this feature.</p> 
-            <h2 id="legacy">Where can I find the legacy computer optimiser scripts?</h2>
-                <p>The old Computer Optimiser Scripts have been replaced by the Hackboto Tech Tips Windows Optimiser application, this decision has been made to improve the overall user experience, however the decision has been made to keep the old legacy computer optimiser scripts available to download.</p>
-                <p>You can view the download page for the legacy computer optimiser scripts by clicking on the button below, however you should bear in mind that the legacy version is now deprecated and will not be receiving any future updates or bug fixes.</p>
-                <a class="linkbutton" href="https://hackbototechtips.github.io/download_centre/computer_optimiser.html" title="Visit the legacy Computer Optimiser download page">Legacy Computer Optimiser Scripts</a>
-        <hr>
-        <p>Page Updated: 28/02/2025</p>
-        <p>Page Author: Hackboto</p>
-    </article>
-    <footer class="asidefooter" title="Website Footer"> <!-- Footer section -->
-        <div class="footertext">
-            <p>©2025 Hackboto Tech Tips All Rights Reserved</p> <!-- Copyright notice -->
-        </div>
-        <div class="footerbuttons">
-            <a href="../map.html" title="Go to Sitemap">Sitemap</a> <!-- Link to sitemap -->
-            <a href="../legal.html" title="Go to Legal">Legal</a> <!-- Link to Legal Page -->
-        </div>
-    </footer> 
+	<div class="sticky">
+		<header>
+			<p>Hackboto Tech Tips</p>
+		</header>
+		<nav class="nav" id="Nav" title="Main Navigation"> <!--Nav-->
+			<div class="columnnav">
+				<a href="../index.html" title="Go to Home">Home</a>
+				<a href="../pc_tips.html" title="Explore tips and tricks for your PC">PC Guides</a>
+				<a href="../mobile_tips.html" title="Explore tips and tricks for you mobile">Mobile Guides</a>
+				<a href="../download_centre.html" class="active" title="Find file downloads here.">Download Centre</a>
+				<a href="../contact.html" title="Visit Contact page">Contact</a>
+			</div>
+			<div class="columnclose">
+				<div class="nav"><button href="javascript:void(0);" class="icon" onclick="navHamburger()" title="Toggle Navigation">☰More</button></div>
+			</div>
+		</nav>
+	</div>
+	  <aside title="Page Navigation">
+		<h2>Page Navigation</h2>
+		<hr>
+		<ul>
+			<li><a href="#top-of-page" title="Go To The Top Of Webpage">Go To Top</a></li>
+			<li><a href="#function" title="Jump to Function">Functions</a></li>
+			<li><a href="#download" title="Jump to download process">Download</a></li>
+			<li><a href="#how-to-use" title="Jump to user guide">User Guide</a></li>
+			<li><a href="#legacy" title="Jump to legacy version">Legacy Version</a></li>
+		</ul>        
+	</aside>    
+	<article title="Main Article Content">
+		<h1 id="top-of-page">Download: Windows Optimiser</h1>
+			<img src="windows_optimiser/windows_optimiser.webp" alt="an image representing the Windows Optimiser.">
+			<h2 id="function">What does the program do?</h2>
+				<p>The Hackboto Tech Tips Windows Optimiser is a free program that removes old and unnecessary system files such as error logs, previous updates, etc from your computer system, as well as old unnecessary files from your user account such as old application logs, and other junk files that will eat up your storage space and cause performance issues.</p>
+			<h2 id="download">Downloading the program</h2>
+				<p>You can download the Hackboto Tech Tips Windows Optimiser using the download button below, this should start the download process.</p>
+				<a class="linkbutton" title="Download Windows_Optimiser.bat" href="https://github.com/H90HSORH0J30JHDSRH/hackbototechtipsfiles/releases/download/downloads/Windows_Optimiser.bat">Download Windows_Optimiser.bat</a>
+				<p>The latest version is 1.3.0 (last updated: 28/02/2025)</p>
+			<h2 id="how-to-use">How do I use the program?</h2> 
+				<h3>Running the program.</h3>
+					<p>To Run the Windows Optimiser you need to double click on the "Windows_Optimiser.bat" file you have downloaded.</p>
+					<img src="settings_optimiser/clickonmoreinfo.webp" alt="Visual representation of error, you might face an antivirus error, if this happens click on 'More info'.">
+						<p>Sometimes the program will be blocked by the built-in antivirus, this is because the program was not created on your computer and has been downloaded off the internet, if you see this warning you will need to click on "More info".</p>
+					<img src="settings_optimiser/runanyway.webp" alt="Visual representation of error, after clicking on 'More info' click on 'Run anyway'.">
+						<p>After clicking on "More info" you will need to click on "Run anyway" to continue.</p>    
+					<img src="windows_optimiser/windows_optimiser.webp" alt="an image representing the Windows Optimiser.">
+						<p>By this stage the Windows Optimiser should be running, you will see two functions which are the User Account Optimiser and the Computer System Optimiser.</p>
+				<h3>Using the Optimise Computer System feature.</h3>
+					<p>The Optimise Computer System feature will target your computer system specifically, it will restore the optimal stability and performance by verifying and repairing your Windows component store, removing old driver leftovers, clearing the system of temporary files, checking for file system errors, clearing old error logs, etc to boost the performance of your computer system and to restore the stability.</p>
+					<p>The Optimise Computer System will require administrative rights, this means that you will need to provide your administrative credentials when you are asked to, the Computer Optimiser will also restart your computer once it has concluded so bear this in mind when you run it.</p>
+				<h3>Using the Optimise User Account feature.</h3>
+					<p>The Optimise User Account feature will specifically target your user account, it will remove any old junk files that have accumulated, clear your jump-lists and file history to improve performance, etc.</p>
+					<p>This feature will not restart your PC and does not require any administrative privileges as it will not make any changes to your computer system and will only optimise your user account, therefore administrative privileges are not required for this feature.</p> 
+			<h2 id="legacy">Where can I find the legacy computer optimiser scripts?</h2>
+				<p>The old Computer Optimiser Scripts have been replaced by the Hackboto Tech Tips Windows Optimiser application, this decision has been made to improve the overall user experience, however the decision has been made to keep the old legacy computer optimiser scripts available to download.</p>
+				<p>You can view the download page for the legacy computer optimiser scripts by clicking on the button below, however you should bear in mind that the legacy version is now deprecated and will not be receiving any future updates or bug fixes.</p>
+				<a class="linkbutton" href="https://hackbototechtips.github.io/download_centre/computer_optimiser.html" title="Visit the legacy Computer Optimiser download page">Legacy Computer Optimiser Scripts</a>
+		<hr>
+		<p>Page Updated: 28/02/2025</p>
+		<p>Page Author: Hackboto</p>
+	</article>
+	<footer class="asidefooter" title="Website Footer"> <!--Footer-->
+		<div class="footertext">
+			<p>©2025 Hackboto Tech Tips All Rights Reserved</p>
+		</div>
+		<div class="footerbuttons">
+			<a href="../map.html" title="Go to Sitemap">Sitemap</a>
+			<a href="../legal.html" title="Go to Legal">Legal</a>
+		</div>
+	</footer> 
 </body>
 </html>
