--- a/pc_tips/adblocker.html
+++ b/pc_tips/adblocker.html
@@ -1,106 +1,106 @@
 <!DOCTYPE html>
 <html lang="en-GB">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Learn about blocking ads on your PC by installing the uBlock Origin extension.">
-    <meta name="keywords" content="Microsoft, Google, Chrome, Edge, Adblock, Ads">
-    <meta name="robots" content="index, follow">
-    <link rel="stylesheet" href="../stylesheet.css"> <!-- Link to external stylesheet -->
-    <link rel="icon" type="image/x-icon" href="../favicon.png">
-    <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet'>
-    <script src="../scripts.js"></script> <!-- JavaScript file -->
-    <title>Blocking Ads on your PC | Hackboto Tech Tips</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Learn about blocking ads on your PC by installing the uBlock Origin extension.">
+	<meta name="keywords" content="Microsoft, Google, Chrome, Edge, Adblock, Ads">
+	<meta name="robots" content="index, follow">
+	<link rel="stylesheet" href="../stylesheet.css"> <!--Stylesheet-->
+	<link rel="icon" type="image/x-icon" href="../favicon.png">
+	<link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet'>
+	<script src="../scripts.js"></script> <!--JavaScript-->
+	<title>Blocking Ads on your PC | Hackboto Tech Tips</title>
 </head>
 <body>
-    <div class="sticky">
-        <header> <!-- Header section -->
-            <p>Hackboto Tech Tips</p> <!-- Header text -->
-        </header>
-        <nav class="nav" id="Nav" title="Main Navigation"> <!-- Navigation section -->
-            <div class="columnnav">
-                <a href="../index.html" title="Go to Home">Home</a> <!-- Navigation links -->
-                <a href="../pc_tips.html" class="active" title="Explore tips and tricks for your PC">PC Guides</a>
-                <a href="../mobile_tips.html" title="Explore tips and tricks for you mobile">Mobile Guides</a>
-                <a href="../download_centre.html" title="Find file downloads here.">Download Centre</a>
-                <a href="../contact.html" title="Visit Contact page">Contact</a>
-            </div>
-            <div class="columnclose">
-                <div class="nav"><button href="javascript:void(0);" class="icon" onclick="navHamburger()" title="Toggle Navigation">☰More</button></div> <!-- Navigation hamburger icon -->
-            </div>
-        </nav>
-    </div>
-      <aside title="Page Navigation"> <!-- Aside section for additional content -->
-        <h2>Page Navigation</h2>
-        <hr>
-        <ul>
-            <li><a href="#top-of-page" title="Go To The Top Of Webpage">Go To Top</a></li>
-            <li><a href="#Introduction" title="Introduction">Introduction</a></li>
-            <li><a href="#uBlock" title="Jump to uBlock Origin">uBlock Origin</a></li>
-            <li><a href="#installing-ublock" title="Jump to installing uBlock Origin">Installing uBlock Origin</a></li>
-            <li class="Subheading"><a href="#EDGE" title="Jump to Installing uBlock Origin on Microsoft Edge">Microsoft Edge</a></li>
-            <li class="Subheading"><a href="#FIREFOX" title="Jump to Installing uBlock Origin on Mozilla Firefox">Mozilla Firefox</a></li>
-            <li class="Subheading"><a href="#CHROME" title="Jump to Installing uBlock Origin on Google Chrome">Google Chrome</a></li>
-            <li class="Subheading"><a href="#OTHERS" title="Jump to Installing uBlock Origin on other browsers">Other web browsers</a></li>
-            <li><a href="#allowing-ads" title="Jump to allowing ads in uBlock Origin">Allowing ads on a specific page</a></li>
-        </ul>        
-    </aside>    
-    <article title="Main Article Content"> <!-- Main article content -->
-        <h1 id="top-of-page">Blocking advertisements on your PC</h1>
-            <img src="adblocker/ads_everywhere.webp" alt="Webpage full of ads">
-                <p class="imgdescription">Ads are annoying, they also put you at risk from scams and malware.</p>
-            <h2 id="Introduction">Introduction</h2>
-                <p>Advertisements are commonplace on the internet as they are a really quick and easy way to make a few quick quid here and there for the website owners/ operators, however in recent years advertisements have become more common place as website owners/ operators are becoming greedier and wanting a larger income from their sites at your expense.</p>
-                <p>You can block these annoying advertisements on your PCs web browser for free using an adblocker.</p>
-                <p>There are many misconceptions surrounding adblockers such as stealing content; however, these are not true as you hold the full right to refuse any content you do not want to see or download on your computer, you can also whitelist websites if you still want to show ads on a particular website.</p>
-                <p>Ads put you at a greater risk of malware and scams, therefore it is best that you block them as a general rule for all websites, and only allow ads on those websites who are not overly greedy and put you at risk.</p>
-            <h2 id="uBlock">uBlock Origin content blocker</h2> 
-            <p>uBlock Origin is by far the best adblocker for your PC, it is an extension that you install on your web browser, this means that all of the websites you visit on your PC will have ads blocked by default once you install the extension.</p>
-            <p>The uBlock Origin content blocker is fully free to use, it is also open-source and the lead developer actually refuses donations for the project. You can learn more about uBlock Origin by visiting the official website.</p>
-            <a class="linkbutton" title="Visit ublockorigin.com" href="https://ublockorigin.com/">uBlock Origin official website</a>
-            <h2 id="installing-ublock">How to install uBlock Origin</h2>
-                <p>It is really easy to install uBlock Origin on your PCs web browser you just need to follow the guide below for your particular web browser.</p>
-                <h3 id="EDGE">Installing uBlock Origin on Microsoft Edge</h3>
-                    <img src="adblocker/edge_get.webp" alt="Get uBlock Origin for Microsoft Edge">
-                    <p>To install uBlock Origin on Microsoft Edge you need to visit the uBlock Origin page in the Edge Add-ons and click on the "Get" button.</p>
-                    <a class="linkbutton" title="Edge Add-ons: uBlock Origin" href="https://microsoftedge.microsoft.com/addons/detail/ublock-origin/odfafepnkmbhccpbejgmiehpchacaeak">Edge Add-ons: uBlock Origin</a>
-                    <br>
-                    <img src="adblocker/edge_add.webp" alt="Add 'uBlock Origin' to Microsoft Edge? Add extension is circled">
-                    <p>Click on the "Add extension" button to install uBlock Origin, once you have done this you should see a message telling you that uBlock Origin has been successfully installed.</p>
-                <h3 id="FIREFOX">Installing uBlock Origin on Mozilla Firefox</h3>
-                    <img src="adblocker/firefox_get.webp" alt="Add uBlock Origin to Firefox">
-                    <p>To install uBlock Origin on Mozilla Firefox you need to visit the uBlock Origin page in the Firefox Browser ADD-ONS and click on the "Add to Firefox" button.</p>
-                    <a class="linkbutton" title="Firefox Browser ADD-ONS: uBlock Origin" href="https://addons.mozilla.org/en-US/firefox/addon/ublock-origin/">Firefox Browser ADD-ONS: uBlock Origin</a>
-                    <br>
-                    <img src="adblocker/firefox_add.webp" alt="Add uBlock Origin? Add extension is circled">
-                    <p>Click on the "Add extension" button to install uBlock Origin, once you have done this you should see a message telling you that uBlock Origin has been successfully installed.</p>
-                <h3 id="CHROME">Installing uBlock Origin on Google Chrome</h3>
-                    <img src="adblocker/chrome_get.webp" alt="Add uBlock Origin to Chrome">
-                    <p><strong>UPDATE: As of 17/10/2024 Google Chrome prevents the use of adblockers, therefore I advise that you switch to Mozilla Firefox as an alternative.</strong></p>
-                    <a class="linkbutton" title="Visit Firefox Download Page" href="https://www.mozilla.org/en-GB/firefox/new/">Download: Mozilla Firefox</a>
-                    <p>To install uBlock Origin on Google Chrome you need to visit the uBlock Origin page in the chrome web store and click on the "Add to Chrome" button.</p>
-                    <a class="linkbutton" title="chrome web store: uBlock Origin" href="https://chromewebstore.google.com/detail/cjpalhdlnbpafiamejdnhcphjbkeiagm">chrome web store: uBlock Origin</a>
-                    <br>
-                    <img src="adblocker/chrome_add.webp" alt="Add 'uBlock Origin'? Add extension is circled">
-                    <p>Click on the "Add extension" button to install uBlock Origin, once you have done this you should see a message telling you that uBlock Origin has been added to Chrome.</p>
-                <h3 id="OTHERS">Installing uBlock Origin on other Web Browsers</h3>
-                    <p>If you are using a web browser that has not been mentioned you should follow the Google Chrome guide as most popular web browsers are based on Google Chrome meaning that the extension should be compatible, if you are using Safari, you are out of luck as uBlock Origin is not supported on any version of the Safari web browser.</p>
-            <h2 id="allowing-ads">How do I allow ads on a specific site?</h2> 
-                <img src="adblocker/allow_ads.webp" alt="Power button is circled.">
-                <p>If you want to allow ads on a particular website for any reason, you just need to click on the uBlock Origin extension, you then need to click on the giant power button, this will whitelist the entire website, to view the ads simply refresh the page.</p>
-                <p>If you want to block the ads after whitelisting the website you just need to navigate to that website again and click the power button, it will then turn blue and the ads will be blocked again.</p>
-            <hr>
-        <p>Page Updated: 17/10/2024</p>
-        <p>Page Author: Hackboto</p>
-    </article>
-    <footer class="asidefooter" title="Website Footer"> <!-- Footer section -->
-        <div class="footertext">
-            <p>©2025 Hackboto Tech Tips All Rights Reserved</p> <!-- Copyright notice -->
-        </div>
-        <div class="footerbuttons">
-            <a href="../map.html" title="Go to Sitemap">Sitemap</a> <!-- Link to sitemap -->
-            <a href="../legal.html" title="Go to Legal">Legal</a> <!-- Link to Legal Page -->
-        </div>
-    </footer> 
+	<div class="sticky">
+		<header>
+			<p>Hackboto Tech Tips</p>
+		</header>
+		<nav class="nav" id="Nav" title="Main Navigation"> <!--Nav-->
+			<div class="columnnav">
+				<a href="../index.html" title="Go to Home">Home</a>
+				<a href="../pc_tips.html" class="active" title="Explore tips and tricks for your PC">PC Guides</a>
+				<a href="../mobile_tips.html" title="Explore tips and tricks for you mobile">Mobile Guides</a>
+				<a href="../download_centre.html" title="Find file downloads here.">Download Centre</a>
+				<a href="../contact.html" title="Visit Contact page">Contact</a>
+			</div>
+			<div class="columnclose">
+				<div class="nav"><button href="javascript:void(0);" class="icon" onclick="navHamburger()" title="Toggle Navigation">☰More</button></div>
+			</div>
+		</nav>
+	</div>
+	<aside title="Page Navigation">
+		<h2>Page Navigation</h2>
+		<hr>
+		<ul>
+			<li><a href="#top-of-page" title="Go To The Top Of Webpage">Go To Top</a></li>
+			<li><a href="#Introduction" title="Introduction">Introduction</a></li>
+			<li><a href="#uBlock" title="Jump to uBlock Origin">uBlock Origin</a></li>
+			<li><a href="#installing-ublock" title="Jump to installing uBlock Origin">Installing uBlock Origin</a></li>
+			<li class="Subheading"><a href="#EDGE" title="Jump to Installing uBlock Origin on Microsoft Edge">Microsoft Edge</a></li>
+			<li class="Subheading"><a href="#FIREFOX" title="Jump to Installing uBlock Origin on Mozilla Firefox">Mozilla Firefox</a></li>
+			<li class="Subheading"><a href="#CHROME" title="Jump to Installing uBlock Origin on Google Chrome">Google Chrome</a></li>
+			<li class="Subheading"><a href="#OTHERS" title="Jump to Installing uBlock Origin on other browsers">Other web browsers</a></li>
+			<li><a href="#allowing-ads" title="Jump to allowing ads in uBlock Origin">Allowing ads on a specific page</a></li>
+		</ul>        
+	</aside>    
+	<article title="Main Article Content">
+		<h1 id="top-of-page">Blocking advertisements on your PC</h1>
+			<img src="adblocker/ads_everywhere.webp" alt="Webpage full of ads">
+				<p class="imgdescription">Ads are annoying, they also put you at risk from scams and malware.</p>
+		<h2 id="Introduction">Introduction</h2>
+			<p>Advertisements are commonplace on the internet as they are a really quick and easy way to make a few quick quid here and there for the website owners/ operators, however in recent years advertisements have become more common place as website owners/ operators are becoming greedier and wanting a larger income from their sites at your expense.</p>
+			<p>You can block these annoying advertisements on your PCs web browser for free using an adblocker.</p>
+			<p>There are many misconceptions surrounding adblockers such as stealing content; however, these are not true as you hold the full right to refuse any content you do not want to see or download on your computer, you can also whitelist websites if you still want to show ads on a particular website.</p>
+			<p>Ads put you at a greater risk of malware and scams, therefore it is best that you block them as a general rule for all websites, and only allow ads on those websites who are not overly greedy and put you at risk.</p>
+		<h2 id="uBlock">uBlock Origin content blocker</h2> 
+			<p>uBlock Origin is by far the best adblocker for your PC, it is an extension that you install on your web browser, this means that all of the websites you visit on your PC will have ads blocked by default once you install the extension.</p>
+			<p>The uBlock Origin content blocker is fully free to use, it is also open-source and the lead developer actually refuses donations for the project. You can learn more about uBlock Origin by visiting the official website.</p>
+			<a class="linkbutton" title="Visit ublockorigin.com" href="https://ublockorigin.com/">uBlock Origin official website</a>
+		<h2 id="installing-ublock">How to install uBlock Origin</h2>
+			<p>It is really easy to install uBlock Origin on your PCs web browser you just need to follow the guide below for your particular web browser.</p>
+			<h3 id="EDGE">Installing uBlock Origin on Microsoft Edge</h3>
+				<img src="adblocker/edge_get.webp" alt="Get uBlock Origin for Microsoft Edge">
+				<p>To install uBlock Origin on Microsoft Edge you need to visit the uBlock Origin page in the Edge Add-ons and click on the "Get" button.</p>
+				<a class="linkbutton" title="Edge Add-ons: uBlock Origin" href="https://microsoftedge.microsoft.com/addons/detail/ublock-origin/odfafepnkmbhccpbejgmiehpchacaeak">Edge Add-ons: uBlock Origin</a>
+				<br>
+				<img src="adblocker/edge_add.webp" alt="Add 'uBlock Origin' to Microsoft Edge? Add extension is circled">
+				<p>Click on the "Add extension" button to install uBlock Origin, once you have done this you should see a message telling you that uBlock Origin has been successfully installed.</p>
+			<h3 id="FIREFOX">Installing uBlock Origin on Mozilla Firefox</h3>
+				<img src="adblocker/firefox_get.webp" alt="Add uBlock Origin to Firefox">
+				<p>To install uBlock Origin on Mozilla Firefox you need to visit the uBlock Origin page in the Firefox Browser ADD-ONS and click on the "Add to Firefox" button.</p>
+				<a class="linkbutton" title="Firefox Browser ADD-ONS: uBlock Origin" href="https://addons.mozilla.org/en-US/firefox/addon/ublock-origin/">Firefox Browser ADD-ONS: uBlock Origin</a>
+				<br>
+				<img src="adblocker/firefox_add.webp" alt="Add uBlock Origin? Add extension is circled">
+				<p>Click on the "Add extension" button to install uBlock Origin, once you have done this you should see a message telling you that uBlock Origin has been successfully installed.</p>
+			<h3 id="CHROME">Installing uBlock Origin on Google Chrome</h3>
+				<img src="adblocker/chrome_get.webp" alt="Add uBlock Origin to Chrome">
+				<p><strong>UPDATE: As of 17/10/2024 Google Chrome prevents the use of adblockers, therefore I advise that you switch to Mozilla Firefox as an alternative.</strong></p>
+				<a class="linkbutton" title="Visit Firefox Download Page" href="https://www.mozilla.org/en-GB/firefox/new/">Download: Mozilla Firefox</a>
+				<p>To install uBlock Origin on Google Chrome you need to visit the uBlock Origin page in the chrome web store and click on the "Add to Chrome" button.</p>
+				<a class="linkbutton" title="chrome web store: uBlock Origin" href="https://chromewebstore.google.com/detail/cjpalhdlnbpafiamejdnhcphjbkeiagm">chrome web store: uBlock Origin</a>
+				<br>
+				<img src="adblocker/chrome_add.webp" alt="Add 'uBlock Origin'? Add extension is circled">
+				<p>Click on the "Add extension" button to install uBlock Origin, once you have done this you should see a message telling you that uBlock Origin has been added to Chrome.</p>
+			<h3 id="OTHERS">Installing uBlock Origin on other Web Browsers</h3>
+				<p>If you are using a web browser that has not been mentioned you should follow the Google Chrome guide as most popular web browsers are based on Google Chrome meaning that the extension should be compatible, if you are using Safari, you are out of luck as uBlock Origin is not supported on any version of the Safari web browser.</p>
+			<h2 id="allowing-ads">How do I allow ads on a specific site?</h2> 
+				<img src="adblocker/allow_ads.webp" alt="Power button is circled.">
+				<p>If you want to allow ads on a particular website for any reason, you just need to click on the uBlock Origin extension, you then need to click on the giant power button, this will whitelist the entire website, to view the ads simply refresh the page.</p>
+				<p>If you want to block the ads after whitelisting the website you just need to navigate to that website again and click the power button, it will then turn blue and the ads will be blocked again.</p>
+			<hr>
+		<p>Page Updated: 17/10/2024</p>
+		<p>Page Author: Hackboto</p>
+	</article>
+	<footer class="asidefooter" title="Website Footer"> <!--Footer-->
+		<div class="footertext">
+			<p>©2025 Hackboto Tech Tips All Rights Reserved</p>
+		</div>
+		<div class="footerbuttons">
+			<a href="../map.html" title="Go to Sitemap">Sitemap</a>
+			<a href="../legal.html" title="Go to Legal">Legal</a>
+		</div>
+	</footer> 
 </body>
 </html>
