--- a/contact.html
+++ b/contact.html
@@ -1,63 +1,63 @@
 <!DOCTYPE html>
-<html lang="en-GB"> <!-- Define the language of the document -->
+<html lang="en-GB">
 <head>
-    <meta charset="UTF-8"> <!-- Define character encoding for the document -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Set the viewport for responsive design -->
-    <meta name="description" content="Contact Hackboto Tech Tips via this page.">
-    <meta name="keywords" content="Hackboto, Tech, Tips, Contact">
-    <meta name="robots" content="index, follow"> <!-- Allow search engine indexing -->
-    <link rel="stylesheet" href="stylesheet.css"> <!-- Link to external stylesheet -->
-    <link rel="icon" type="image/x-icon" href="favicon.png">
-    <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet'>
-    <script src="scripts.js"></script> <!-- Link to external JavaScript file -->
-    <title>Contact | Hackboto Tech Tips</title> <!-- Document title -->
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Contact Hackboto Tech Tips via this page.">
+	<meta name="keywords" content="Hackboto, Tech, Tips, Contact">
+	<meta name="robots" content="index, follow">
+	<link rel="stylesheet" href="stylesheet.css"> <!--Stylesheet -->
+	<link rel="icon" type="image/x-icon" href="favicon.png">
+	<link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet'>
+	<script src="scripts.js"></script> <!--JavaScript-->
+	<title>Contact | Hackboto Tech Tips</title>
 </head>
 <body>
-    <div class="sticky">
-        <header> <!-- Header section -->
-            <p>Hackboto Tech Tips</p> <!-- Header text -->
-        </header>
-        <nav class="nav" id="Nav" title="Main Navigation"> <!-- Navigation section -->
-            <div class="columnnav">
-                <a href="index.html" title="Go to Home">Home</a> <!-- Navigation links -->
-                <a href="pc_tips.html" title="Explore tips and tricks for your PC">PC Guides</a>
-                <a href="mobile_tips.html" title="Explore tips and tricks for you mobile">Mobile Guides</a>
-                <a href="download_centre.html" title="Find file downloads here.">Download Centre</a>
-                <a href="contact.html" class="active" title="Visit Contact page">Contact</a>
-            </div>
-            <div class="columnclose">
-                <div class="nav"><button href="javascript:void(0);" class="icon" onclick="navHamburger()" title="Toggle Navigation">☰More</button></div> <!-- Navigation hamburger icon -->
-            </div>
-        </nav>
-    </div>
-    <br>
-    <section title="Main Content"> <!-- Main content section -->
-        <div class="welcometext"> <!-- Contact section -->
-            <h1>Contact Hackboto Tech Tips</h1> <!-- Contact heading -->
-            <p>Notice: You submit data in this form at your own risk, Hackboto Tech Tips does not take any legal responsibility for the data submitted. The form uses a third-party service you can find their <a href="https://formspree.io/legal/privacy-policy/" class="linkblack" title="Go To Formspree Privacy Policy">Privacy Policy Here.</a></p> <!-- Contact information -->
-        </div>
-        <br>
-        <div class="contact-form" title="Contact Form"> <!-- Contact form -->
-            <form action="https://formspree.io/f/mzbnlvqw" method="post"> <!-- Form -->
-                <label for="name" title="Your Name">Name:</label><br> <!-- Name input -->
-                <input type="text" id="name" name="name" required><br>
-                <label for="email" title="Your Email">Email:</label><br> <!-- Email input -->
-                <input type="email" id="email" name="email" required><br>
-                <label for="message" title="Your Message">Message:</label><br> <!-- Message input -->
-                <textarea id="message" name="message" rows="4" required></textarea><br>
-                <input type="submit" value="Submit" title="Submit Form"> <!-- Submit button -->
-                <p>By submitting this form you agree that you are sending the data in this form at your own risk, the data you have provided is correct, you give Hackboto Tech Tips permission to contact you, and you agree to the Hackboto Tech Tips <a href="https://hackbototechtips.github.io/legal.html" class="linkblack" title="Go To Hackboto Tech Tips Legal and Privacy Policy">terms and conditions.</a></p>
-            </form>
-        </div>
-    </section>
-    <footer title="Website Footer"> <!-- Footer section -->
-        <div class="footertext">
-            <p>©2025 Hackboto Tech Tips All Rights Reserved</p> <!-- Copyright notice -->
-        </div>
-        <div class="footerbuttons">
-            <a href="map.html" title="Go to Sitemap">Sitemap</a> <!-- Link to sitemap -->
-            <a href="legal.html" title="Go to Legal">Legal</a> <!-- Link to Legal Page -->
-        </div>
-    </footer>
+	<div class="sticky">
+		<header>
+			<p>Hackboto Tech Tips</p>
+		</header>
+		<nav class="nav" id="Nav" title="Main Navigation"> <!--Nav-->
+			<div class="columnnav">
+				<a href="index.html" title="Go to Home">Home</a>
+				<a href="pc_tips.html" title="Explore tips and tricks for your PC">PC Guides</a>
+				<a href="mobile_tips.html" title="Explore tips and tricks for you mobile">Mobile Guides</a>
+				<a href="download_centre.html" title="Find file downloads here.">Download Centre</a>
+				<a href="contact.html" class="active" title="Visit Contact page">Contact</a>
+			</div>
+			<div class="columnclose">
+				<div class="nav"><button href="javascript:void(0);" class="icon" onclick="navHamburger()" title="Toggle Navigation">☰More</button></div>
+			</div>
+		</nav>
+	</div>
+	<br>
+	<section title="Main Content">
+		<div class="welcometext">
+			<h1>Contact Hackboto Tech Tips</h1>
+			<p>Notice: You submit data in this form at your own risk, Hackboto Tech Tips does not take any legal responsibility for the data submitted. The form uses a third-party service you can find their <a href="https://formspree.io/legal/privacy-policy/" class="linkblack" title="Go To Formspree Privacy Policy">Privacy Policy Here.</a></p>
+		</div>
+		<br>
+		<div class="contact-form" title="Contact Form"> <!--Contact form-->
+			<form action="https://formspree.io/f/mzbnlvqw" method="post">
+				<label for="name" title="Your Name">Name:</label><br>
+				<input type="text" id="name" name="name" required><br>
+				<label for="email" title="Your Email">Email:</label><br>
+				<input type="email" id="email" name="email" required><br>
+				<label for="message" title="Your Message">Message:</label><br>
+				<textarea id="message" name="message" rows="4" required></textarea><br>
+				<input type="submit" value="Submit" title="Submit Form">
+				<p>By submitting this form you agree that you are sending the data in this form at your own risk, the data you have provided is correct, you give Hackboto Tech Tips permission to contact you, and you agree to the Hackboto Tech Tips <a href="https://hackbototechtips.github.io/legal.html" class="linkblack" title="Go To Hackboto Tech Tips Legal and Privacy Policy">terms and conditions.</a></p>
+			</form>
+		</div>
+	</section>
+	<footer title="Website Footer"> <!--Footer-->
+		<div class="footertext">
+			<p>©2025 Hackboto Tech Tips All Rights Reserved</p>
+		</div>
+		<div class="footerbuttons">
+			<a href="map.html" title="Go to Sitemap">Sitemap</a>
+			<a href="legal.html" title="Go to Legal">Legal</a>
+		</div>
+	</footer>
 </body>
 </html>
