--- a/map.html
+++ b/map.html
@@ -1,83 +1,81 @@
 <!DOCTYPE html>
-<html lang="en-GB"> <!-- Define the language of the document -->
+<html lang="en-GB">
 <head>
-    <meta charset="UTF-8"> <!-- Define character encoding for the document -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Set the viewport for responsive design -->
-    <meta name="description" content="This is the sitemap for Hackboto Tech Tips, you can find all of the webpages here.">
-    <meta name="keywords" content="Hackboto, Tech, Tips, sitemap">
-    <meta name="robots" content="noindex,nofollow"> <!-- Prevent search engine indexing -->
-    <link rel="stylesheet" href="stylesheet.css"> <!-- Link to external stylesheet -->
-    <link rel="icon" type="image/x-icon" href="favicon.png">
-    <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet'>
-    <script src="scripts.js"></script> <!-- Link to external JavaScript file -->
-    <title>Sitemap | Hackboto Tech Tips</title> <!-- Document title -->
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="This is the sitemap for Hackboto Tech Tips, you can find all of the webpages here.">
+	<meta name="keywords" content="Hackboto, Tech, Tips, sitemap">
+	<meta name="robots" content="noindex,nofollow"> <!--No indexing-->
+	<link rel="stylesheet" href="stylesheet.css"> <!--Stylesheet-->
+	<link rel="icon" type="image/x-icon" href="favicon.png">
+	<link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet'>
+	<script src="scripts.js"></script> <!--JavaScript-->
+	<title>Sitemap | Hackboto Tech Tips</title>
 </head>
 <body>
-    <div class="sticky">
-        <header> <!-- Header section -->
-            <p>Hackboto Tech Tips</p> <!-- Header text -->
-        </header>
-        <nav class="nav" id="Nav" title="Main Navigation"> <!-- Navigation section -->
-            <div class="columnnav">
-                <a href="index.html" title="Go to Home">Home</a> <!-- Navigation links -->
-                <a href="pc_tips.html" title="Explore tips and tricks for your PC">PC Guides</a>
-                <a href="mobile_tips.html" title="Explore tips and tricks for you mobile">Mobile Guides</a>
-                <a href="download_centre.html" title="Find file downloads here.">Download Centre</a>
-                <a href="contact.html" title="Visit Contact page">Contact</a>
-            </div>
-            <div class="columnclose">
-                <div class="nav"><button href="javascript:void(0);" class="icon" onclick="navHamburger()" title="Toggle Navigation">☰More</button></div> <!-- Navigation hamburger icon -->
-            </div>
-        </nav>
-    </div>
-    <br>
-    <div class="welcometext">
-        <h1>Hackboto Tech Tips Sitemap Page</h1> <!-- Welcome text -->
-        <p>You have reached the Hackboto Tech Tips sitemap page, here you will find a structured list containing links to of all the webpages featured on this website.</p> <!-- Introduction paragraph -->
-    </div>
-    <hr>
-    <section class="sitemap" title="Website Sitemap"> <!-- Sitemap section -->
-        <div> <!-- Level 1 -->
-            <h2><a href="index.html" title="Go to Homepage">Hackboto Tech Tips Homepage</a></h1> <!-- Level 2 heading -->
-            <ul> <!-- Unordered list -->
-            </ul>
+	<div class="sticky">
+		<header>
+			<p>Hackboto Tech Tips</p>
+		</header>
+		<nav class="nav" id="Nav" title="Main Navigation"> <!--Nav-->
+			<div class="columnnav">
+				<a href="index.html" title="Go to Home">Home</a>
+				<a href="pc_tips.html" title="Explore tips and tricks for your PC">PC Guides</a>
+				<a href="mobile_tips.html" title="Explore tips and tricks for you mobile">Mobile Guides</a>
+				<a href="download_centre.html" title="Find file downloads here.">Download Centre</a>
+				<a href="contact.html" title="Visit Contact page">Contact</a>
+			</div>
+			<div class="columnclose">
+				<div class="nav"><button href="javascript:void(0);" class="icon" onclick="navHamburger()" title="Toggle Navigation">☰More</button></div>
+			</div>
+		</nav>
+	</div>
+	<br>
+	<div class="welcometext">
+		<h1>Hackboto Tech Tips Sitemap Page</h1>
+		<p>You have reached the Hackboto Tech Tips sitemap page, here you will find a structured list containing links to of all the webpages featured on this website.</p>
+	</div>
+	<hr>
+	<section class="sitemap" title="Website Sitemap">
+		<div>
+			<h2><a href="index.html" title="Go to Homepage">Hackboto Tech Tips Homepage</a></h1>
         </div>
-        <div> <!-- Level 2 -->
-            <h2><a href="pc_tips.html" title="Explore tips and tricks for your PC">PC Guides</a></h2> <!-- Level 2 heading -->
-            <ul> <!-- Unordered list -->
-                <li><h3><a href="pc_tips/upgrading_to_windows11.html" title="Learn how and why you should upgrade to Windows 11">Upgrade to Windows 11 24H2</a></h3></li>
-                <li><h3><a href="pc_tips/windows_optimise.html" title="Learn how you can optimise your Windows PC">Optimising Windows 10/ 11</a></h3></li>
-                <li><h3><a href="pc_tips/windows_debloat.html" title="Learn how and why you should debloat your PC.">Debloating Windows 11 24H2</a></h3></li>
-                <li><h3><a href="pc_tips/hardware_acceleration_black_screen_fix.html" title="Learn how you can fix the back screen artefacts caused by hardware acceleration.">Fix Hardware Acceleration Black Screen</a></h3></li>
-                <li><h3><a href="pc_tips/windows_backup.html" title="Learn how you can backup your Windows PC.">Backing Up Windows 10/ 11</a></h3></li>
-                <li><h3><a href="pc_tips/adblocker.html" title="Learn about blocking ads on your PC.">Blocking ads on your PC</a></h3></li>
-                <li><h3><a href="pc_tips/check_wddm_version.html" title="Learn about checking your WDDM driver version">Finding your WDDM version</a></h3></li>
-            </ul>
-            <h2><a href="mobile_tips.html" title="Explore tips and tricks for your mobile device">Mobile Guides</a></h2> <!-- Level 2 heading -->
-            <ul>
-                <li><h3><a href="mobile_tips/dns_adblocker.html" title="Learn how you can block ads on your mobile using DNS">Blocking ads on your mobile</a></h3></li>
-            </ul>
-            <h2><a href="download_centre.html" title="Go to File Downloads">Download Centre</a></h2>
-                <ul><!-- Unordered list -->
-                    <li><h3><a href="download_centre/settings_optimiser.html" title="Go to Settings Optimiser download page">Settings Optimiser</a></h3></li>
-                    <li><h3><a href="download_centre/windows_optimiser.html" title="Go to Windows Optimiser download page">Windows Optimiser</a></h3></li>
-                    <li><h3><a href="download_centre/multi-pane_overlay_disable_reg.html" title="Go to Multi-Plane Overlay fix download page">MPO Fix .reg</a></h3></li>
-                    <li><h3><a href="download_centre/popcnt_checker.html" title="Go to POPCNT Checker download page">POPCNT Checker</a></h3></li>
-                    <li><h3><a href="download_centre/win11_requirement_bypass_tool.html" title="Go to Windows 11 Requirement Bypass Tool download page">Windows 11 Requirement Bypass Tool</a></h3></li>
-                    <li><h3><a href="download_centre/computer_optimiser.html" title="Go to Computer Optimiser download page">Computer Optimiser (Deprecated)</a></h3></li>
-                </ul>
-            <h2><a href="contact.html" title="Visit Contact page">Contact</a></h2> <!-- Level 2 heading -->
-            <h2><a href="legal.html" title="Go to Legal">Legal</a></h2> <!-- Level 2 heading -->
-        </div>
-    </section>
-    <footer title="Website Footer"> <!-- Footer section -->
-        <div class="footertext">
-            <p>©2025 Hackboto Tech Tips All Rights Reserved</p> <!-- Copyright notice -->
-        </div>
-        <div class="footerbuttons">
-            <a href="map.html" title="Go to Sitemap">Sitemap</a> <!-- Link to sitemap -->
-            <a href="legal.html" title="Go to Legal">Legal</a> <!-- Link to Legal Page -->
-        </div>
-    </footer>
+        <div>
+			<h2><a href="pc_tips.html" title="Explore tips and tricks for your PC">PC Guides</a></h2>
+			<ul>
+				<li><h3><a href="pc_tips/upgrading_to_windows11.html" title="Learn how and why you should upgrade to Windows 11">Upgrade to Windows 11 24H2</a></h3></li>
+				<li><h3><a href="pc_tips/windows_optimise.html" title="Learn how you can optimise your Windows PC">Optimising Windows 10/ 11</a></h3></li>
+				<li><h3><a href="pc_tips/windows_debloat.html" title="Learn how and why you should debloat your PC.">Debloating Windows 11 24H2</a></h3></li>
+				<li><h3><a href="pc_tips/hardware_acceleration_black_screen_fix.html" title="Learn how you can fix the back screen artefacts caused by hardware acceleration.">Fix Hardware Acceleration Black Screen</a></h3></li>
+				<li><h3><a href="pc_tips/windows_backup.html" title="Learn how you can backup your Windows PC.">Backing Up Windows 10/ 11</a></h3></li>
+				<li><h3><a href="pc_tips/adblocker.html" title="Learn about blocking ads on your PC.">Blocking ads on your PC</a></h3></li>
+				<li><h3><a href="pc_tips/check_wddm_version.html" title="Learn about checking your WDDM driver version">Finding your WDDM version</a></h3></li>
+			</ul>
+			<h2><a href="mobile_tips.html" title="Explore tips and tricks for your mobile device">Mobile Guides</a></h2>
+			<ul>
+				<li><h3><a href="mobile_tips/dns_adblocker.html" title="Learn how you can block ads on your mobile using DNS">Blocking ads on your mobile</a></h3></li>
+			</ul>
+			<h2><a href="download_centre.html" title="Go to File Downloads">Download Centre</a></h2>
+				<ul>
+					<li><h3><a href="download_centre/settings_optimiser.html" title="Go to Settings Optimiser download page">Settings Optimiser</a></h3></li>
+					<li><h3><a href="download_centre/windows_optimiser.html" title="Go to Windows Optimiser download page">Windows Optimiser</a></h3></li>
+					<li><h3><a href="download_centre/multi-pane_overlay_disable_reg.html" title="Go to Multi-Plane Overlay fix download page">MPO Fix .reg</a></h3></li>
+					<li><h3><a href="download_centre/popcnt_checker.html" title="Go to POPCNT Checker download page">POPCNT Checker</a></h3></li>
+					<li><h3><a href="download_centre/win11_requirement_bypass_tool.html" title="Go to Windows 11 Requirement Bypass Tool download page">Windows 11 Requirement Bypass Tool</a></h3></li>
+					<li><h3><a href="download_centre/computer_optimiser.html" title="Go to Computer Optimiser download page">Computer Optimiser (Deprecated)</a></h3></li>
+				</ul>
+			<h2><a href="contact.html" title="Visit Contact page">Contact</a></h2>
+			<h2><a href="legal.html" title="Go to Legal">Legal</a></h2>
+		</div>
+	</section>
+	<footer title="Website Footer"> <!--Footer-->
+		<div class="footertext">
+			<p>©2025 Hackboto Tech Tips All Rights Reserved</p> <!--Copyright-->
+		</div>
+		<div class="footerbuttons">
+			<a href="map.html" title="Go to Sitemap">Sitemap</a>
+			<a href="legal.html" title="Go to Legal">Legal</a>
+		</div>
+	</footer>
 </body>
 </html>
