--- a/pc_tips/check_wddm_version.html
+++ b/pc_tips/check_wddm_version.html
@@ -1,78 +1,78 @@
 <!DOCTYPE html>
 <html lang="en-GB">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Need to know the WDDM version on your PC? Follow this guide to learn your WDDM version.">
-    <meta name="keywords" content="Windows, 11, WDDM, Version>
-    <meta name="robots" content="index, follow">
-    <link rel="stylesheet" href="../stylesheet.css"> <!-- Link to external stylesheet -->
-    <link rel="icon" type="image/x-icon" href="../favicon.png">
-    <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet'>
-    <script src="../scripts.js"></script> <!-- Link to external JavaScript file -->
-    <title>Finding WDDM version | Hackboto Tech Tips</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Need to know the WDDM version on your PC? Follow this guide to learn your WDDM version.">
+	<meta name="keywords" content="Windows, 11, WDDM, Version>
+	<meta name="robots" content="index, follow">
+	<link rel="stylesheet" href="../stylesheet.css"> <!--Stylesheet-->
+	<link rel="icon" type="image/x-icon" href="../favicon.png">
+	<link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet'>
+	<script src="../scripts.js"></script> <!--JavaScript-->
+	<title>Finding WDDM version | Hackboto Tech Tips</title>
 </head>
 <body>
-    <div class="sticky">
-        <header> <!-- Header section -->
-            <p>Hackboto Tech Tips</p> <!-- Header text -->
-        </header>
-        <nav class="nav" id="Nav" title="Main Navigation"> <!-- Navigation section -->
-            <div class="columnnav">
-                <a href="../index.html" title="Go to Home">Home</a> <!-- Navigation links -->
-                <a href="../pc_tips.html" class="active" title="Explore tips and tricks for your PC">PC Guides</a>
-                <a href="../mobile_tips.html" title="Explore tips and tricks for you mobile">Mobile Guides</a>
-                <a href="../download_centre.html" title="Find file downloads here.">Download Centre</a>
-                <a href="../contact.html" title="Visit Contact page">Contact</a>
-            </div>
-            <div class="columnclose">
-                <div class="nav"><button href="javascript:void(0);" class="icon" onclick="navHamburger()" title="Toggle Navigation">☰More</button></div> <!-- Navigation hamburger icon -->
-            </div>
-        </nav>
-    </div>
-      <aside title="Page Navigation"> <!-- Aside section for additional content -->
-        <h2>Page Navigation</h2>
-        <hr>
-        <ul>
-            <li><a href="#top-of-page" title="Go To The Top Of Webpage">Go To Top</a></li>
-            <li><a href="#Introduction" title="Introduction">Introduction</a></li>
-            <li><a href="#using-dxdiag" title="Jump to using dxdiag">Using dxdiag to find WDDM version</a></li>
-        </ul>        
-    </aside>    
-    <article title="Main Article Content"> <!-- Main article content -->
-        <h1 id="top-of-page">Finding your WDDM version</h1>
-            <h2 id="Introduction">Introduction</h2>
-                <p>WDDM stands for Windows Display Driver Model, the latest version of the Windows operating system, Windows 11 requires WDDM 2.0, therefore it is important that you know the display driver model version that your computer is operating under.</p>
-                <p>It is really easy to find your Windows Display Driver Model version, you will need to use a tool called DirectX Diagnostic Tool (dxdiag.exe), this tool is free to use and is built into your computer.</p>
-            <h2 id="using-dxdiag">How do I use DirectX Diagnostic Tool to find my WDDM version?</h2>
-                <p>It is really easy to find your WDDM version using the dxdiag tool, to launch dxdiag you need to open run by holding both the Windows key "🪟" and "R" key on your keyboard at the same time.</p>
-                <img src="check_wddm_version/run_dxdiag.webp" alt="an image representing Run dialog, dxdiag.exe has been entered.">
-                <p>Once you have opened the run dialog, you need to enter "dxdiag.exe" and press the "OK" button, this will launch the DirectX Diagnostic Tool.</p>
-                <img src="check_wddm_version/dxdiag.webp" alt="an image representing dxdiag, Display 1 tab has been highlighted.">
-                <p>You should now see the DirectX Diagnostic Tool; you need to click on the tab that says "Display 1".</p>
-                <img src="check_wddm_version/display_1_dxdiag.webp" alt="an image representing dxdiag Display 1 tab, Drivers section is circled, Driver Model has been highlighted.">
-                <p>On the right of the dxdiag tool you should see a section called "Drivers", in this section you should see your Driver Model, in the example above the Driver Model is "WDDM 3.1", the value you see in this section is your WDDM version.</p>
-                <p><strong>Your WDDM version must be 2.0 or higher if you wish to run Windows 11, you might be able to update to a newer driver model by updating your display drivers or by upgrading your GPU if you are using a desktop.</strong></p>
-                <p><strong>If you are using a laptop, you cannot replace your GPU and you will need to replace your entire machine if WDDM 2.0 drivers are not available for your hardware if you wish to upgrade to Windows 11.</strong></p>
-                <p>You can install the latest display drivers for your hardware from your GPU manufacturer, the most common GPU manufacturers for computers are Intel, AMD, and NVIDIA, you can download the latest display drivers for your computer via the links below.</p>
-                <p><strong>For Intel based graphics:</strong></p>
-                <a class="linkbutton" title="Visit Intel Download Drivers & Software page" href="https://www.intel.com/content/www/us/en/download-center/home.html">Intel Download Centre</a>
-                <p><strong>For AMD based graphics:</strong></p>
-                <a class="linkbutton" title="Visit AMD Drivers and Support for Processors and Graphics" href="https://www.amd.com/en/support/download/drivers.html">AMD Drivers and Support</a>
-                <p><strong>For NVIDIA GeForce® based graphics:</strong></p>
-                <a class="linkbutton" title="Visit NVIDIA GeForce® Drivers page" href="https://www.nvidia.com/en-gb/geforce/drivers/">NVIDIA GeForce® Drivers</a>
-        <hr>
-        <p>Page Updated: 28/06/2024</p>
-        <p>Page Author: Hackboto</p>
-    </article>
-    <footer class="asidefooter" title="Website Footer"> <!-- Footer section -->
-        <div class="footertext">
-            <p>©2025 Hackboto Tech Tips All Rights Reserved</p> <!-- Copyright notice -->
-        </div>
-        <div class="footerbuttons">
-            <a href="../map.html" title="Go to Sitemap">Sitemap</a> <!-- Link to sitemap -->
-            <a href="../legal.html" title="Go to Legal">Legal</a> <!-- Link to Legal Page -->
-        </div>
-    </footer> 
+	<div class="sticky">
+		<header>
+			<p>Hackboto Tech Tips</p>
+		</header>
+		<nav class="nav" id="Nav" title="Main Navigation"> <!--Nav-->
+			<div class="columnnav">
+				<a href="../index.html" title="Go to Home">Home</a>
+				<a href="../pc_tips.html" class="active" title="Explore tips and tricks for your PC">PC Guides</a>
+				<a href="../mobile_tips.html" title="Explore tips and tricks for you mobile">Mobile Guides</a>
+				<a href="../download_centre.html" title="Find file downloads here.">Download Centre</a>
+				<a href="../contact.html" title="Visit Contact page">Contact</a>
+			</div>
+			<div class="columnclose">
+				<div class="nav"><button href="javascript:void(0);" class="icon" onclick="navHamburger()" title="Toggle Navigation">☰More</button></div>
+			</div>
+		</nav>
+	</div>
+	<aside title="Page Navigation">
+		<h2>Page Navigation</h2>
+		<hr>
+		<ul>
+			<li><a href="#top-of-page" title="Go To The Top Of Webpage">Go To Top</a></li>
+			<li><a href="#Introduction" title="Introduction">Introduction</a></li>
+			<li><a href="#using-dxdiag" title="Jump to using dxdiag">Using dxdiag to find WDDM version</a></li>
+		</ul>        
+	</aside>    
+	<article title="Main Article Content">
+		<h1 id="top-of-page">Finding your WDDM version</h1>
+			<h2 id="Introduction">Introduction</h2>
+				<p>WDDM stands for Windows Display Driver Model, the latest version of the Windows operating system, Windows 11 requires WDDM 2.0, therefore it is important that you know the display driver model version that your computer is operating under.</p>
+				<p>It is really easy to find your Windows Display Driver Model version, you will need to use a tool called DirectX Diagnostic Tool (dxdiag.exe), this tool is free to use and is built into your computer.</p>
+			<h2 id="using-dxdiag">How do I use DirectX Diagnostic Tool to find my WDDM version?</h2>
+				<p>It is really easy to find your WDDM version using the dxdiag tool, to launch dxdiag you need to open run by holding both the Windows key "🪟" and "R" key on your keyboard at the same time.</p>
+				<img src="check_wddm_version/run_dxdiag.webp" alt="an image representing Run dialog, dxdiag.exe has been entered.">
+				<p>Once you have opened the run dialog, you need to enter "dxdiag.exe" and press the "OK" button, this will launch the DirectX Diagnostic Tool.</p>
+				<img src="check_wddm_version/dxdiag.webp" alt="an image representing dxdiag, Display 1 tab has been highlighted.">
+				<p>You should now see the DirectX Diagnostic Tool; you need to click on the tab that says "Display 1".</p>
+				<img src="check_wddm_version/display_1_dxdiag.webp" alt="an image representing dxdiag Display 1 tab, Drivers section is circled, Driver Model has been highlighted.">
+				<p>On the right of the dxdiag tool you should see a section called "Drivers", in this section you should see your Driver Model, in the example above the Driver Model is "WDDM 3.1", the value you see in this section is your WDDM version.</p>
+				<p><strong>Your WDDM version must be 2.0 or higher if you wish to run Windows 11, you might be able to update to a newer driver model by updating your display drivers or by upgrading your GPU if you are using a desktop.</strong></p>
+				<p><strong>If you are using a laptop, you cannot replace your GPU and you will need to replace your entire machine if WDDM 2.0 drivers are not available for your hardware if you wish to upgrade to Windows 11.</strong></p>
+				<p>You can install the latest display drivers for your hardware from your GPU manufacturer, the most common GPU manufacturers for computers are Intel, AMD, and NVIDIA, you can download the latest display drivers for your computer via the links below.</p>
+				<p><strong>For Intel based graphics:</strong></p>
+				<a class="linkbutton" title="Visit Intel Download Drivers & Software page" href="https://www.intel.com/content/www/us/en/download-center/home.html">Intel Download Centre</a>
+				<p><strong>For AMD based graphics:</strong></p>
+				<a class="linkbutton" title="Visit AMD Drivers and Support for Processors and Graphics" href="https://www.amd.com/en/support/download/drivers.html">AMD Drivers and Support</a>
+				<p><strong>For NVIDIA GeForce® based graphics:</strong></p>
+				<a class="linkbutton" title="Visit NVIDIA GeForce® Drivers page" href="https://www.nvidia.com/en-gb/geforce/drivers/">NVIDIA GeForce® Drivers</a>
+		<hr>
+		<p>Page Updated: 28/06/2024</p>
+		<p>Page Author: Hackboto</p>
+	</article>
+	<footer class="asidefooter" title="Website Footer"> <!--Footer-->
+		<div class="footertext">
+			<p>©2025 Hackboto Tech Tips All Rights Reserved</p>
+		</div>
+		<div class="footerbuttons">
+			<a href="../map.html" title="Go to Sitemap">Sitemap</a>
+			<a href="../legal.html" title="Go to Legal">Legal</a>
+		</div>
+	</footer> 
 </body>
 </html>
